--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,12 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
-    <h3>안녕하세요 홈화면입니다</h3>
-
-    <h2>반가워요 ~</h2>
-
-    <a href="/login">로그인하러가기 ~</a>
+    <div class="login-form">
+        <h1>로그인</h1>
+        <input type="text" placeholder="ID" required>
+        <input type="password" placeholder="PW" required>
+        <input type="submit" value="로그인">
+    </div>
 </body>
 </html>
