--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -63,7 +63,7 @@
         };
 
         // fetch를 사용하여 POST 요청 보내기
-        fetch('http://localhost:8081/api/member/signup/', {
+        fetch('http://43.202.68.231:8081/api/member/signup/', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
